--- a/styles/style.css
+++ b/styles/style.css
@@ -1,1 +1,236 @@
 @import "./reset.css";
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap');
+
+html, body {
+    font-family: 'Poppins', sans-serif;
+}
+
+.container {
+    margin: 0 auto ;
+    max-width: 1440px;
+    padding: 0 32px;
+}
+
+/* HEADER */
+.header {
+    height: 800px;
+    padding-top: 31px;
+    padding-bottom: 100px;
+
+    background-color: #000000;
+    background-image: url("../img/header-bg.jpg");
+    background-size: cover;
+    background-position: center;
+
+    border-radius: 0 0 54px 54px;
+
+    color: #FFFFFF;
+}
+
+.container--header {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+
+    height: 100%;
+}
+
+.header a {
+    color: #FFFFFF;
+}
+
+.nav {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.nav-list {
+    display: flex;
+    column-gap: 54px;
+}
+
+.nav-list__item {
+    text-transform: capitalize;
+}
+
+.nav-list__link {
+    color: #FFFFFF;
+    opacity: 0.7;
+}
+
+.nav-list__link--active {
+    opacity: 1;
+}
+
+.user {
+    display: flex;
+    column-gap: 8px;
+    align-items: center;
+}
+
+.user__content {
+    font-size: 14px;
+    line-height: 1.5;
+
+    text-transform: capitalize;
+    text-align: right;
+    
+    color: #FFFFFF;
+}
+
+.user__greeting {
+    opacity: 0.5;
+}
+
+.user__name {
+    font-weight: 600;
+    text-transform: capitalize;
+    opacity: 1;
+}
+
+.user__avatar {
+    position: relative;
+    height: 48px;
+    width: 48px;
+}
+
+.user__avatar::after {
+    position: absolute;
+    top: 0;
+    right: 0;
+
+    content: "";
+    display: block;
+
+    height: 12px;
+    width: 12px;
+    border-radius: 50%;
+
+    background-color: #FF0000;
+}
+
+.user__avatar img {
+    height: 48px;
+    width: 48px;
+    object-fit: cover;
+    border-radius: 50%;
+}
+
+.header__content {
+    row-gap: 32px;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.header__title {
+    font-weight: 600;
+    font-size: 48px;
+    line-height: 1.3;
+}
+
+.button {
+    display: flex;
+    align-items: center;
+    column-gap: 10px;
+
+    height: 72px;
+    padding: 24px;
+
+    background: #7B61FF;
+    border-radius: 12px;
+
+    color: #FFFFFF;
+    font-weight: 600;
+    font-size: 18px;
+
+    transition: all 0.2s ease-in;
+}
+
+.button:hover {
+    background: #6142ff;
+}
+
+.form {
+    display: flex;
+    width: 1140px;
+    height: 88px;
+    padding: 8px;
+
+    background-color: #FFFFFF;
+    border-radius: 12px;
+
+    color: #000;
+}
+
+.header__form {
+    
+}
+
+.form__input {
+    position: relative;
+    padding: 16px 20px 16px 56px;
+    flex-grow: 1;
+
+    line-height: 1;
+    /* background-color: #c4d7f1; */
+}
+
+.form__input::before {
+    content: "";
+    display: block;
+    position: absolute;
+    width: 24px;
+    height: 24px;
+    
+    
+    left: 16px;
+    top: 24px;
+}
+
+.form__input--location::before {
+    background-image: url("./../img/icons/map.svg");
+}
+
+.form__input--activity::before {
+    background-image: url("./../img/icons/activity.svg");
+}
+
+.form__input--when::before {
+    background-image: url("./../img/icons/calendar.svg");
+}
+
+.form__input--guests::before {
+    background-image: url("./../img/icons/guests.svg");
+}
+
+.label {
+    font-weight: 300;
+    font-size: 14px;
+    line-height: 1;
+
+    color: #5B5B5B;
+}
+
+.select {
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+
+    color: #161414;
+}
+
+.button-search {
+    width: 60px;
+    height: 60px;
+    padding: 18px;
+    align-self: center;
+     
+    background: #7B61FF;
+    border-radius: 12px;
+
+    font-size: 0;
+}
